# libtusclient

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  conanfile.py  config.h.in  configure.bat  configure.sh  docker-compose.yml  graph_info.json  mockoon-data.json  nginx.conf  portfile.cmake  project.json  qodana.yaml  vcpkg-configuration.json  vcpkg.json  vpm.bat  vpm.sh
.ci/: macos.yml
.github/workflows/: cmake-ci-pipeline-main.yml  cmake-ci-pipeline.yml  linux-workflow.yml  mac-workflow.yml  mockoon-data.json  qodana_code_quality.yml  windows-workflow.yml
.resources/templates/: LICENSE_template.jinja  README_template.jinja
.resources/templates/c++/: class_template.cpp.jinja  class_template.h.jinja  main_template.cpp.jinja  module_template.h.jinja  test_main_template.cpp.jinja
.resources/templates/cmake/: CMakeLists.txt.jinja  app_CMakeLists.txt.jinja  lib_CMakeLists.txt.jinja  test_CMakeLists.txt.jinja
.resources/templates/docs/: doxyfile_template.jinja
.resources/templates/gtest/: gtest_fixture_template.cpp.jinja  gtest_parametrized_template.cpp.jinja  gtest_simple_template.cpp.jinja
.resources/templates/qt/: qrc_template.qrc.jinja
.vpm/: README.md  requirements.txt
.vpm/.assets/: company_logo.txt
.vpm/.cache/: config.json
.vpm/.resources/: platforms.json  project.json  reserved_names.json
.vpm/.template/: .gitlab-ci_template_library.yml  .gitlab-ci_template_standard.yml  CMakeList_template.txt  CMakePresetForLinuxCI.json  CMakePresetForWindowsCI.json  CMakePresets_template.json  CONTRIBUTING.md  Doxyfile_template  LICENSE  QT_PROJECT_TEMPLATE_EXE.txt  QT_PROJECT_TEMPLATE_LIB.txt  config.h.in
.vpm/.template/.ci/: linux.yml  windows.yml
.vpm/.template/include/: shared_template.h.txt
.vpm/.template/resources/: resources.qrc
.vpm/.template/src/: qt_main_template.cpp.txt
.vpm/.template/test/: CMakeList_template.txt
.vpm/src/: cmake_presets_manager.py  git_manager.py  project_manager.py  project_structure_manager.py  project_utilities.py  vcpkg_manager.py  vpm.py
cmake/: Common.cmake  Config.cmake.in  QtUtils.cmake  VcpkgUtils.cmake  common.cmake  config.cmake  qt-utils.cmake  tusclientConfig.cmake.in  version.h.in
cmake/scripts/: DeployWindowsQtForVcpkg.bat
cmake_tools_for_vcpkg/: .gitignore  setup_project.bat  setup_project.sh
cmake_tools_for_vcpkg/tools/: .gitignore  deploy_vcpkg.py  setup.py
cmake_tools_for_vcpkg/tools/cmake/: Qt6Deployer.cmake  cmakeProject.cmake  deploy.cmake  portfile_template.cmake  targetCreator.cmake
include/: FileChunker.h  ICacheManager.h  IFileChunker.h  TusClient.h  TusStatus.h  config.h  libtusclient.h
include/cache/: CacheRepository.h  ICacheManager.h  TUSFile.h
include/chunk/: FileChunker.h  IFileChunker.h  TUSChunk.h
include/chunk/utility/: ChunkUtility.h
include/exceptions/: HttpException.h  TUSException.h
include/http/: HttpClient.h  IHttpClient.h  Request.h  RequestTask.h
include/logging/: EasyLoggingService.h  GLoggingService.h  ILogger.h
include/model/: TUSChunk.h  TUSFile.h
include/repository/: CacheRepository.h  IRepository.h
include/utility/: ChunkUtility.h
include/verifiers/: IFileVerifier.h  Md5Verifier.h
lib/: CMakeLists.txt
lib/tusclient/: CMakeLists.txt  LICENSE  README.md  package.json
lib/tusclient/.cmake/: sources.cmake  tusclient_sources.cmake
lib/tusclient/docs/: .gitignore  Doxyfile
lib/tusclient/include/tusclient/: TusClient.h  TusStatus.h  config.h  libtusclient.h
lib/tusclient/include/tusclient/cache/: CacheRepository.h  ICacheManager.h  TUSFile.h
lib/tusclient/include/tusclient/chunk/: FileChunker.h  IFileChunker.h  TUSChunk.h
lib/tusclient/include/tusclient/chunk/utility/: ChunkUtility.h
lib/tusclient/include/tusclient/exceptions/: TUSException.h
lib/tusclient/include/tusclient/http/: Request.h
lib/tusclient/include/tusclient/logging/: GLoggingService.h  ILogger.h
lib/tusclient/include/tusclient/repository/: IRepository.h
lib/tusclient/include/tusclient/verifiers/: IFileVerifier.h  Md5Verifier.h
lib/tusclient/src/tusclient/: TusClient.cpp
lib/tusclient/src/tusclient/cache/: CacheRepository.cpp
lib/tusclient/src/tusclient/chunk/: FileChunker.cpp
lib/tusclient/src/tusclient/chunk/utility/: ChunkUtility.cpp
lib/tusclient/src/tusclient/http/: HttpClient.cpp  Request.cpp
lib/tusclient/src/tusclient/verifiers/: Md5Verifier.cpp
lib/tusclient/test/: CMakeLists.txt  FileChunkerTest.cpp  TusClientTest.cpp  main.cpp
lib/tusclient/test/http/: HttpClientTest.cpp
lib/tusclient/test/repository/: CacheRepositoryTest.cpp
lib/tusclient/test/verifiers/: FileVerifiersTest.cpp
scripts/: install_for_mac.sh
src/: FileChunker.cpp  TusClient.cpp  libtusclient.cpp
src/cache/: CacheRepository.cpp  FileChunker.cpp  TUSFile.cpp
src/chunk/: FileChunker.cpp  TUSChunk.cpp
src/chunk/utility/: ChunkUtility.cpp
src/http/: HttpClient.cpp  Request.cpp  RequestTask.cpp
src/logging/: EasyLoggingService.cpp  GLoggingService.cpp
src/model/: TUSChunk.cpp  TUSFile.cpp
src/repository/: CacheRepository.cpp
src/utility/: ChunkUtility.cpp
src/verifiers/: Md5Verifier.cpp
test/: CMakeLists.txt  FileChunkerTest.cpp  TusClientTest.cpp  main.cpp  test.cpp
test/http/: HttpClientTest.cpp
test/repository/: CacheRepositoryTest.cpp
test/verifiers/: FileVerifiersTest.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tools/: dev_tools.py  requirements.txt
tools/cli/unix/: create_source_file.sh  fast_sources.sh  update_sources.sh
tools/cli/windows/: create_source_file.bat  fast_sources.bat  update_sources.bat
tools/src/module_creation/: create_module.py  module_creator.py
tools/src/package_managers_initializers/: package_manager.py  vcpkg_initializer.py
tools/src/project_management/: configure_project.py  initialize_project.py  project_configuration.py
tools/src/source_management/: create_source_file.py  file_synchronizer.py  update_files.py
tools/src/subtree/: subtree_manager.py
tools/src/wizard/: wizard.py
(+1 files in other folders)
